[gd_scene load_steps=21 format=2]

[ext_resource path="res://MaterialBasher.gd" type="Script" id=1]
[ext_resource path="res://NormalGenerator.gdshader" type="Shader" id=2]
[ext_resource path="res://UnshadedPlain.material" type="Material" id=3]

[sub_resource type="Environment" id=13]

[sub_resource type="World" id=14]
environment = SubResource( 13 )

[sub_resource type="ShaderMaterial" id=16]
shader = ExtResource( 2 )
shader_param/strength = null
shader_param/band_strength_0 = null
shader_param/band_strength_1 = null
shader_param/band_strength_2 = null
shader_param/band_strength_3 = null
shader_param/band_strength_4 = null
shader_param/band_strength_5 = null
shader_param/band_strength_6 = null
shader_param/darkpoint = null
shader_param/midpoint = null
shader_param/midpoint_offset = null
shader_param/lightpoint = null
shader_param/depth_offset = null
shader_param/channel = null
shader_param/generate_normal = null
shader_param/albedo = Color( 1, 1, 1, 1 )

[sub_resource type="QuadMesh" id=17]

[sub_resource type="ViewportTexture" id=19]
viewport_path = NodePath("Helper")

[sub_resource type="ProceduralSky" id=6]
sun_latitude = -180.0

[sub_resource type="Environment" id=5]
background_mode = 2
background_sky = SubResource( 6 )
ambient_light_color = Color( 0.501961, 0.501961, 0.501961, 1 )
ambient_light_sky_contribution = 0.0

[sub_resource type="SpatialMaterial" id=18]

[sub_resource type="SphereMesh" id=4]
radial_segments = 256
rings = 128

[sub_resource type="Gradient" id=1]
interpolation_mode = 2
offsets = PoolRealArray( 0.150838, 0.603352, 0.748603, 0.871508, 1 )
colors = PoolColorArray( 0.191849, 0.251301, 0.386719, 0.45098, 0.435294, 0.498039, 0.584314, 0.682353, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture2D" id=8]
gradient = SubResource( 1 )
width = 16
height = 15
fill = 1
fill_from = Vector2( 0.5, 1 )
fill_to = Vector2( 0.5, 0.5 )

[sub_resource type="StyleBoxTexture" id=9]
texture = SubResource( 8 )
region_rect = Rect2( 0, 0, 16, 16 )
margin_left = 8.0
margin_right = 8.0
margin_top = 16.0
margin_bottom = 2.0
expand_margin_bottom = 3.0

[sub_resource type="Gradient" id=10]
interpolation_mode = 2
offsets = PoolRealArray( 0.150838, 0.603352, 0.741573, 0.871508, 1 )
colors = PoolColorArray( 0.119835, 0.16533, 0.271484, 0.262745, 0.435294, 0.498039, 0.584314, 0.411765, 0, 0, 0, 0.635294, 1, 1, 1, 0.654902, 1, 1, 1, 0 )

[sub_resource type="GradientTexture2D" id=11]
gradient = SubResource( 10 )
width = 16
height = 16
fill = 1
fill_from = Vector2( 0.5, 1 )
fill_to = Vector2( 0.5, 0.6 )

[sub_resource type="StyleBoxTexture" id=12]
texture = SubResource( 11 )
region_rect = Rect2( 0, 0, 16, 16 )
margin_left = 8.0
margin_right = 8.0
margin_top = 16.0
expand_margin_bottom = 2.0

[sub_resource type="GradientTexture2D" id=2]
gradient = SubResource( 1 )
width = 16
height = 16
fill = 1
fill_from = Vector2( 0.5, 0.5 )
fill_to = Vector2( 0.5, 0 )

[sub_resource type="StyleBoxTexture" id=3]
texture = SubResource( 2 )
region_rect = Rect2( 0, 0, 16, 16 )
margin_left = 8.0
margin_right = 8.0
margin_top = 8.0
margin_bottom = 8.0

[node name="Scene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Helper" type="Viewport" parent="."]
size = Vector2( 256, 256 )
own_world = true
world = SubResource( 14 )
transparent_bg = true
handle_input_locally = false
keep_3d_linear = true
render_target_v_flip = true
render_target_update_mode = 0
gui_disable_input = true
gui_snap_controls_to_pixels = false

[node name="Camera" type="Camera" parent="Helper"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.5 )
current = true
fov = 90.0

[node name="Quad" type="MeshInstance" parent="Helper"]
material_override = SubResource( 16 )
mesh = SubResource( 17 )

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
margin_right = 512.0
margin_bottom = 512.0
texture = SubResource( 19 )
expand = true

[node name="3D" type="Spatial" parent="."]

[node name="LightHolder" type="Spatial" parent="3D"]

[node name="DirectionalLight" type="DirectionalLight" parent="3D/LightHolder"]
transform = Transform( 0.707107, 0.5, -0.5, 0, 0.707107, 0.707107, 0.707107, -0.5, 0.5, 0, 2.92074, 3 )
light_energy = 1.4

[node name="WorldEnvironment" type="WorldEnvironment" parent="3D"]
environment = SubResource( 5 )

[node name="SphereHolder" type="Spatial" parent="3D"]

[node name="Sphere" type="MeshInstance" parent="3D/SphereHolder"]
material_override = SubResource( 18 )
mesh = SubResource( 4 )

[node name="CameraHolder" type="Spatial" parent="3D"]

[node name="Camera" type="Camera" parent="3D/CameraHolder"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3 )
current = true

[node name="Tabs" type="TabContainer" parent="."]
margin_left = 30.0
margin_top = 169.0
margin_right = 321.0
margin_bottom = 534.0
custom_colors/font_color_bg = Color( 0.270588, 0.270588, 0.282353, 1 )
custom_styles/tab_fg = SubResource( 9 )
custom_styles/tab_bg = SubResource( 12 )
custom_styles/panel = SubResource( 3 )

[node name="Normal Map" type="VBoxContainer" parent="Tabs"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 40.0
margin_right = -8.0
margin_bottom = -8.0

[node name="Label" type="Label" parent="Tabs/Normal Map"]
margin_right = 275.0
margin_bottom = 14.0
size_flags_horizontal = 5
text = "Normal Map Strength"

[node name="Slider" type="HSlider" parent="Tabs/Normal Map"]
margin_top = 18.0
margin_right = 275.0
margin_bottom = 34.0
size_flags_horizontal = 3
size_flags_vertical = 1

[node name="Label2" type="Label" parent="Tabs/Normal Map"]
margin_top = 38.0
margin_right = 275.0
margin_bottom = 52.0
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Frequency Distribution"

[node name="Freqs" type="HBoxContainer" parent="Tabs/Normal Map"]
margin_top = 56.0
margin_right = 275.0
margin_bottom = 172.0
rect_min_size = Vector2( 0, 100 )
custom_constants/separation = 9

[node name="VSlider1" type="VSlider" parent="Tabs/Normal Map/Freqs"]
margin_right = 16.0
margin_bottom = 116.0
value = 100.0

[node name="VSlider2" type="VSlider" parent="Tabs/Normal Map/Freqs"]
margin_left = 25.0
margin_right = 41.0
margin_bottom = 116.0
value = 100.0

[node name="VSlider3" type="VSlider" parent="Tabs/Normal Map/Freqs"]
margin_left = 50.0
margin_right = 66.0
margin_bottom = 116.0
value = 100.0

[node name="VSlider4" type="VSlider" parent="Tabs/Normal Map/Freqs"]
margin_left = 75.0
margin_right = 91.0
margin_bottom = 116.0
value = 100.0

[node name="VSlider5" type="VSlider" parent="Tabs/Normal Map/Freqs"]
margin_left = 100.0
margin_right = 116.0
margin_bottom = 116.0
value = 100.0

[node name="VSlider6" type="VSlider" parent="Tabs/Normal Map/Freqs"]
margin_left = 125.0
margin_right = 141.0
margin_bottom = 116.0
value = 100.0

[node name="VSlider7" type="VSlider" parent="Tabs/Normal Map/Freqs"]
margin_left = 150.0
margin_right = 166.0
margin_bottom = 116.0
value = 100.0

[node name="Presets" type="VBoxContainer" parent="Tabs/Normal Map/Freqs"]
margin_left = 175.0
margin_right = 275.0
margin_bottom = 116.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Flat" type="Button" parent="Tabs/Normal Map/Freqs/Presets"]
margin_right = 100.0
margin_bottom = 20.0
text = "Flat"

[node name="Smooth" type="Button" parent="Tabs/Normal Map/Freqs/Presets"]
margin_top = 24.0
margin_right = 100.0
margin_bottom = 44.0
text = "Smooth"

[node name="Rough" type="Button" parent="Tabs/Normal Map/Freqs/Presets"]
margin_top = 48.0
margin_right = 100.0
margin_bottom = 68.0
text = "Rough"

[node name="Fuzzy" type="Button" parent="Tabs/Normal Map/Freqs/Presets"]
margin_top = 72.0
margin_right = 100.0
margin_bottom = 92.0
text = "Fuzzy"

[node name="Mids" type="Button" parent="Tabs/Normal Map/Freqs/Presets"]
margin_top = 96.0
margin_right = 100.0
margin_bottom = 116.0
text = "Mids"

[node name="Label3" type="Label" parent="Tabs/Normal Map"]
margin_top = 176.0
margin_right = 275.0
margin_bottom = 190.0
text = "Darkpoint Value"

[node name="Slider2" type="HSlider" parent="Tabs/Normal Map"]
margin_top = 194.0
margin_right = 275.0
margin_bottom = 210.0
size_flags_horizontal = 3
size_flags_vertical = 1

[node name="Label4" type="Label" parent="Tabs/Normal Map"]
margin_top = 214.0
margin_right = 275.0
margin_bottom = 228.0
text = "Midpoint Value"

[node name="Slider3" type="HSlider" parent="Tabs/Normal Map"]
margin_top = 232.0
margin_right = 275.0
margin_bottom = 248.0
size_flags_horizontal = 3
size_flags_vertical = 1
value = 50.0

[node name="Label5" type="Label" parent="Tabs/Normal Map"]
margin_top = 252.0
margin_right = 275.0
margin_bottom = 266.0
text = "Lightpoint Value"

[node name="Slider4" type="HSlider" parent="Tabs/Normal Map"]
margin_top = 270.0
margin_right = 275.0
margin_bottom = 286.0
size_flags_horizontal = 3
size_flags_vertical = 1
value = 100.0

[node name="Label6" type="Label" parent="Tabs/Normal Map"]
margin_top = 290.0
margin_right = 275.0
margin_bottom = 304.0
text = "Midpoint Offset"

[node name="Slider5" type="HSlider" parent="Tabs/Normal Map"]
margin_top = 308.0
margin_right = 275.0
margin_bottom = 324.0
size_flags_horizontal = 3
size_flags_vertical = 1
value = 50.0

[node name="Label7" type="Label" parent="Tabs/Normal Map"]
margin_top = 328.0
margin_right = 275.0
margin_bottom = 342.0
text = "Channel"

[node name="OptionButton" type="OptionButton" parent="Tabs/Normal Map"]
margin_top = 346.0
margin_right = 275.0
margin_bottom = 366.0
text = "Grey"
flat = true

[node name="Depth Map" type="VBoxContainer" parent="Tabs"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 40.0
margin_right = -8.0
margin_bottom = -8.0

[node name="Label" type="Label" parent="Tabs/Depth Map"]
margin_right = 275.0
margin_bottom = 14.0
size_flags_horizontal = 5
text = "Depth Map Strength"

[node name="Slider" type="HSlider" parent="Tabs/Depth Map"]
margin_top = 18.0
margin_right = 275.0
margin_bottom = 34.0
size_flags_horizontal = 3
size_flags_vertical = 1

[node name="Label2" type="Label" parent="Tabs/Depth Map"]
margin_top = 38.0
margin_right = 275.0
margin_bottom = 52.0
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Frequency Distribution"

[node name="Freqs" type="HBoxContainer" parent="Tabs/Depth Map"]
margin_top = 56.0
margin_right = 275.0
margin_bottom = 172.0
rect_min_size = Vector2( 0, 100 )
custom_constants/separation = 9

[node name="VSlider1" type="VSlider" parent="Tabs/Depth Map/Freqs"]
margin_right = 16.0
margin_bottom = 116.0
value = 100.0

[node name="VSlider2" type="VSlider" parent="Tabs/Depth Map/Freqs"]
margin_left = 25.0
margin_right = 41.0
margin_bottom = 116.0
value = 100.0

[node name="VSlider3" type="VSlider" parent="Tabs/Depth Map/Freqs"]
margin_left = 50.0
margin_right = 66.0
margin_bottom = 116.0
value = 100.0

[node name="VSlider4" type="VSlider" parent="Tabs/Depth Map/Freqs"]
margin_left = 75.0
margin_right = 91.0
margin_bottom = 116.0
value = 100.0

[node name="VSlider5" type="VSlider" parent="Tabs/Depth Map/Freqs"]
margin_left = 100.0
margin_right = 116.0
margin_bottom = 116.0
value = 100.0

[node name="VSlider6" type="VSlider" parent="Tabs/Depth Map/Freqs"]
margin_left = 125.0
margin_right = 141.0
margin_bottom = 116.0
value = 100.0

[node name="VSlider7" type="VSlider" parent="Tabs/Depth Map/Freqs"]
margin_left = 150.0
margin_right = 166.0
margin_bottom = 116.0
value = 100.0

[node name="Presets" type="VBoxContainer" parent="Tabs/Depth Map/Freqs"]
margin_left = 175.0
margin_right = 275.0
margin_bottom = 116.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Flat" type="Button" parent="Tabs/Depth Map/Freqs/Presets"]
margin_right = 100.0
margin_bottom = 20.0
text = "Flat"

[node name="Smooth" type="Button" parent="Tabs/Depth Map/Freqs/Presets"]
margin_top = 24.0
margin_right = 100.0
margin_bottom = 44.0
text = "Smooth"

[node name="Rough" type="Button" parent="Tabs/Depth Map/Freqs/Presets"]
margin_top = 48.0
margin_right = 100.0
margin_bottom = 68.0
text = "Rough"

[node name="Fuzzy" type="Button" parent="Tabs/Depth Map/Freqs/Presets"]
margin_top = 72.0
margin_right = 100.0
margin_bottom = 92.0
text = "Fuzzy"

[node name="Mids" type="Button" parent="Tabs/Depth Map/Freqs/Presets"]
margin_top = 96.0
margin_right = 100.0
margin_bottom = 116.0
text = "Mids"

[node name="Label3" type="Label" parent="Tabs/Depth Map"]
margin_top = 176.0
margin_right = 275.0
margin_bottom = 190.0
text = "Darkpoint Value"

[node name="Slider2" type="HSlider" parent="Tabs/Depth Map"]
margin_top = 194.0
margin_right = 275.0
margin_bottom = 210.0
size_flags_horizontal = 3
size_flags_vertical = 1

[node name="Label4" type="Label" parent="Tabs/Depth Map"]
margin_top = 214.0
margin_right = 275.0
margin_bottom = 228.0
text = "Midpoint Value"

[node name="Slider3" type="HSlider" parent="Tabs/Depth Map"]
margin_top = 232.0
margin_right = 275.0
margin_bottom = 248.0
size_flags_horizontal = 3
size_flags_vertical = 1
value = 50.0

[node name="Label5" type="Label" parent="Tabs/Depth Map"]
margin_top = 252.0
margin_right = 275.0
margin_bottom = 266.0
text = "Lightpoint Value"

[node name="Slider4" type="HSlider" parent="Tabs/Depth Map"]
margin_top = 270.0
margin_right = 275.0
margin_bottom = 286.0
size_flags_horizontal = 3
size_flags_vertical = 1
value = 100.0

[node name="Label6" type="Label" parent="Tabs/Depth Map"]
margin_top = 290.0
margin_right = 275.0
margin_bottom = 304.0
text = "Midpoint Offset"

[node name="Slider5" type="HSlider" parent="Tabs/Depth Map"]
margin_top = 308.0
margin_right = 275.0
margin_bottom = 324.0
size_flags_horizontal = 3
size_flags_vertical = 1
value = 50.0

[node name="Label7" type="Label" parent="Tabs/Depth Map"]
margin_top = 328.0
margin_right = 275.0
margin_bottom = 342.0
text = "Channel"

[node name="OptionButton" type="OptionButton" parent="Tabs/Depth Map"]
margin_top = 346.0
margin_right = 275.0
margin_bottom = 366.0
flat = true

[node name="Label8" type="Label" parent="Tabs/Depth Map"]
margin_right = 275.0
margin_bottom = 14.0
size_flags_horizontal = 5
text = "Depth Map Offset"

[node name="Slider6" type="HSlider" parent="Tabs/Depth Map"]
margin_top = 18.0
margin_right = 275.0
margin_bottom = 34.0
size_flags_horizontal = 3
size_flags_vertical = 1
value = 50.0

[node name="Ambient Color" type="HFlowContainer" parent="Tabs"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 24.0
margin_right = -4.0
margin_bottom = -4.0

[node name="ColorPicker" type="ColorPicker" parent="Tabs/Ambient Color"]
margin_right = 308.0
margin_bottom = 412.0
size_flags_horizontal = 3
size_flags_vertical = 3
edit_alpha = false
presets_enabled = false
presets_visible = false

[node name="Panel" type="PanelContainer" parent="."]
visible = false
margin_left = 22.0
margin_top = 161.0
margin_right = 329.0
margin_bottom = 542.0
custom_styles/panel = SubResource( 3 )

[node name="ToggleMat" type="Button" parent="."]
margin_left = 30.0
margin_top = 20.0
margin_right = 139.0
margin_bottom = 40.0
text = "Toggle Material"

[node name="MeshInstance" type="MeshInstance" parent="ToggleMat"]
material_override = ExtResource( 3 )
